# oop-college-4th-course

./: .gitignore  CMakeLists.txt  README.md
Practice/: CMakeLists.txt
Practice/PracticalWork10/: CMakeLists.txt  main.cpp  main.swift
Practice/practical-work02/sources/: Main.cpp
Practice/practical-work03/: Main.cpp
Practice/practical-work04/: CMakeLists.txt
Practice/practical-work06/: CMakeLists.txt
Practice/practical-work07/: Main.cpp
Practice/practical-work08/: CMakeLists.txt  Main.cpp
Practice/practical-work09/: CMakeLists.txt  Main.cpp
practical-work1/: CMakeLists.txt  Main.cpp  Main.swift
practical-work2/: CMakeLists.txt  Main.cpp  README.md
practical-work3/: CMakeLists.txt  Main.cpp  README.md
practical-work4/: CMakeLists.txt  Main.cpp
practical-work5/: CMakeLists.txt  Main.cpp
practical-work6/: CMakeLists.txt  Main.cpp
practice/: CMakeLists.txt
practice/practical-work05/: Main.cpp
practice/practical-work06/: Main.cpp
practice/practical-work1/: CMakeLists.txt  Main.cpp
practice/practical-work2/: CMakeLists.txt
practice/practical-work2/include/: Phone.h
practice/practical-work2/sources/: Phone.cpp
practice/practical-work3/: CMakeLists.txt  Main.cpp  Main.swift
practice/practical-work4/: Main.cpp
practice/practical-work5/: CMakeLists.txt
practice/practical-work6/: Main.cpp
practice/practical-work7/: CMakeLists.txt  Main.cpp  Main.swift
september/: CMakeLists.txt
september/06/: CMakeLists.txt  Main.cpp  README.md
