project(Practice)

add_subdirectory(practical-work01)
add_subdirectory(practical-work02)
add_subdirectory(practical-work03)
add_subdirectory(practical-work04)
add_subdirectory(practical-work05)
add_subdirectory(practical-work06)
add_subdirectory(practical-work07)
add_subdirectory(practical-work08)
add_subdirectory(practical-work09)

add_subdirectory(PracticalWork10)
