project(Practice)

add_subdirectory(practical-work01)
add_subdirectory(practical-work02)
add_subdirectory(practical-work03)
add_subdirectory(practical-work04)
add_subdirectory(practical-work05)
add_subdirectory(practical-work06)
add_subdirectory(practical-work07)
add_subdirectory(practical-work08)
add_subdirectory(practical-work09)
add_subdirectory(PracticalWork10)

# add_custom_target(${PROJECT_NAME})
# add_dependencies(${PROJECT_NAME}
#   PracticePracticalWork1
#   PracticePracticalWork2
#   PracticePracticalWork3
#   PracticePracticalWork4
#   PracticePracticalWork5
#   PracticePracticalWork6
#   PracticePracticalWork7
#   PracticePracticalWork8
#   PracticePracticalWork9
# )
